--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,55 @@
 .page {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-areas:
-    ". header header."
-    "sidebar content content ."
-    ". footer  footer.";
-    background-color: #ffffff;
-  }
-/*font, size, left margin and background color for the body*/
-body {
-    margin: 40px;
-    font-family: 'Courier New', Courier, monospace, Sans, helvetica, arial, verdana ;
-    background-color: #aea5a5;
-  }
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-areas:
+  ". header header."
+  "sidebar content content ."
+  ". footer  footer.";
+  margin: 40px;
+  font-family: 'Courier New', Courier, monospace, Sans, helvetica, arial, verdana ;
+  background-color: #aea5a5;
+}
 
 .header {
-    grid-area: header;
-    text-align: center;
-  }
-  
+  grid-area: header;
+  text-align: center;
+}
+
 .sidebar {
-    grid-area: sidebar;
-    text-align: center;
-  }  
+  grid-area: sidebar;
+  text-align: center;
+}  
 
-/*Position for the board where the images are displayed*/
-.container { 
-    width: 800px;
-    height: auto;
-    display: grid;
-    grid-gap: 10px;
-    background: #cad2d5;
-    grid-template-columns: repeat(columns, 1fr);
-    grid-template-rows: repeat(rows, 1fr);
-    padding: 15px;
-    margin: 10px;
-    align-items:center;
-    grid-area: content;
-  }
-
-.cards {
-    background-color: #b85050;
-    color: #ffffff;
-    border-radius: 10px;
-    text-align: center;
-    padding: 15px;
-    border: 3px solid #00000033;
-    
-  }
-  
 .footer {
   grid-area: footer;
   text-align: center;
   font-size: 30%;
+  }
+
+
+  
+/*Position for the board where the images are displayed*/
+.container { 
+  flex: 0 1 15%;;
+  grid-gap: 10px;
+  background: #cad2d5;
+  grid-template-columns: repeat(columns, 1fr);
+  grid-template-rows: repeat(rows, 1fr);
+  padding: 5px;
+  margin: 5px;
+  align-items:center;
+  grid-area: content;
 }
+
+.cards {
+  flex: 1 1 auto;
+  background-color: #b85050;
+  color: #ffffff;
+  border-radius: 5px;
+  text-align: center;
+  padding: 5px;
+  border: 3px solid #00000033;
+  
+}
+
